# burp-api-mcp

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  README_EN.md  burp_api.db  pyproject.toml  start.bat  start.ps1  start.sh
.github/workflows/: release.yml
doc/: API_USAGE.md  MCP_CLIENT_SETUP.md  QUICKSTART.md  TROUBLESHOOTING.md
scripts/: parse_and_import.py  run_server.py
src/burp_api_mcp/: __init__.py  main.py  models.py  parser.py
